adding db